[gd_scene load_steps=8 format=2]

[ext_resource path="res://Background/background.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Candy Beans.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/SummaryReport/SummaryPanel.gd" type="Script" id=3]
[ext_resource path="res://Images/bg1.png" type="Texture" id=4]
[ext_resource path="res://Assets/left.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 2 )

[node name="Node" type="Node"]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 290.722, 511.707 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 89.2628
margin_top = 54.379
margin_right = 508.263
margin_bottom = 137.379
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Summary Report"
align = 1
valign = 2

[node name="SummaryPanel" type="Panel" parent="."]
margin_top = 40.0
margin_right = 535.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="SummaryBoard" type="Sprite" parent="SummaryPanel"]
position = Vector2( 297.621, 482.826 )
scale = Vector2( 0.588, 0.587 )
texture = ExtResource( 4 )

[node name="ScrollContainer" type="ScrollContainer" parent="SummaryPanel/SummaryBoard"]
margin_left = -419.384
margin_top = -488.0
margin_right = 394.616
margin_bottom = 542.0

[node name="SummaryList" type="VBoxContainer" parent="SummaryPanel/SummaryBoard/ScrollContainer"]

[node name="HTTPRequest" type="HTTPRequest" parent="SummaryPanel"]

[node name="HTTPRequest2" type="HTTPRequest" parent="SummaryPanel"]

[node name="BackButton" type="Sprite" parent="."]
position = Vector2( 67.671, 57.499 )
scale = Vector2( 0.131, 0.089 )
texture = ExtResource( 5 )

[node name="BButton" type="Button" parent="BackButton"]
margin_left = -316.0
margin_top = -406.0
margin_right = 335.0
margin_bottom = 355.0
flat = true

[node name="ClassNameLabel" type="Label" parent="."]
margin_left = 174.35
margin_top = 161.85
margin_right = 401.35
margin_bottom = 221.85
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Class Name"
align = 1
valign = 1
[connection signal="request_completed" from="SummaryPanel/HTTPRequest" to="SummaryPanel" method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="SummaryPanel/HTTPRequest2" to="SummaryPanel" method="_on_HTTPRequest2_request_completed"]
[connection signal="pressed" from="BackButton/BButton" to="SummaryPanel" method="_on_BButton_pressed"]
